<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/edit_profile_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/edit_profile_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact"
        android:inputType="number"
        android:id="@+id/edit_profile_contact"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/save_name_contact"/>

</LinearLayout>