<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="?attr/colorPrimary"
        android:id="@+id/image_holder">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_user"
            android:id="@+id/profile_screen_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_screen_image"
            android:layout_marginTop="6dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:text="Dipanjan Biswas"
            android:id="@+id/profile_name"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/profile_name"
            android:id="@+id/toggle_switch"/>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/save_profile_image">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_holder"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/profile_email"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ash_grey"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/profile_contact"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ash_grey"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="20dp"
            />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_edit"
                android:layout_marginStart="5dp"
                android:id="@+id/change_location"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/profile_location"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ash_grey"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:text="@string/edit"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/profile_edit"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:backgroundTint="@android:color/transparent"
            android:background="@drawable/button_background"
            android:text="@string/logout"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/profile_logout"/>
    </LinearLayout>

</RelativeLayout>