<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/ash_variant"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/item_profileimage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/item_profileimage"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:id="@+id/pat_date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/pat_date"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:id="@+id/pat_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/pat_name"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/pat_full_address"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/accept"
                android:layout_below="@id/pat_full_address"
                android:layout_marginTop="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/pat_accept"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/decline"
                android:layout_below="@id/pat_full_address"
                android:layout_toEndOf="@id/pat_accept"
                android:layout_alignTop="@id/pat_accept"
                android:layout_alignBottom="@id/pat_accept"
                android:layout_marginStart="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/pat_decline"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/complete"
                android:layout_below="@id/pat_full_address"
                android:layout_toEndOf="@id/pat_decline"
                android:layout_alignTop="@id/pat_decline"
                android:layout_alignBottom="@id/pat_decline"
                android:layout_marginStart="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/pat_completed"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:padding="5dp"
                android:textColor="@android:color/holo_green_light"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="@drawable/pending_background"
                android:id="@+id/pat_pending"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>